--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 remote_user = ansible
 host_key_checking = false
 inventory = inventory
-
+roles_path: ./roles
 [privilege_escalation] 
 become = True
 become_method = sudo
