--- a/kvm_provision.yaml
+++ b/kvm_provision.yaml
@@ -5,12 +5,15 @@
   become: yes
   vars:
     pool_dir: "/var/lib/libvirt/images"
-    vm: control
+    vm:
+      - web
+      - DB
+      - ftp
     vcpus: 2
     ram_mb: 2048
     cleanup: no
     net: default
-    ssh_pub_key: "/home/david/.ssh/id_ed25519.pub"
+    ssh_pub_key: "/home/davidt/.ssh/id_ed25519.pub"
 
   tasks:
     - name: KVM Provision role
@@ -18,9 +21,11 @@
         name: kvm_provision
       vars:
         libvirt_pool_dir: "{{ pool_dir }}"
-        vm_name: "{{ vm }}"
+        vm_name: "{{ item }}"
         vm_vcpus: "{{ vcpus }}"
         vm_ram_mb: "{{ ram_mb }}"
         vm_net: "{{ net }}"
         cleanup_tmp: "{{ cleanup }}"
         ssh_key: "{{ ssh_pub_key }}"
+      loop: "{{ vm }}"
+    
