--- a/roles/kvm_provision/defaults/main.yml
+++ b/roles/kvm_provision/defaults/main.yml
@@ -10,6 +10,6 @@ vm_name: Alma10-dev
 vm_vcpus: 2
 vm_ram_mb: 2048
 vm_net: default
-vm_root_pass: test123
+vm_root_pass: root
 cleanup_tmp: no
 ssh_key: /root/.ssh/id_rsa.pub
