Added IP addressing to lab

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 remote_user = ansible
 host_key_checking = false
-inventory = inventory
+inventory = hosts.ini
 roles_path: ./roles
 [privilege_escalation] 
 become = True
