--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
-remote_user = ansible
+remote_user = davidt
 host_key_checking = false
-inventory = hosts.ini
+inventory = inventory.yaml
+vault_password_file = ~/vault-pass
 roles_path: ./roles
 [privilege_escalation] 
 become = True
